2010-01-10  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Adam Barth.

        [Qt] Add enableXSSAuditor support to QWebSettings and DRT.

        https://bugs.webkit.org/show_bug.cgi?id=33419

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        * Api/qwebsettings.h:

2010-01-09  Daniel Bates  <dbates@webkit.org>

        No review, rolling out r53044.
        http://trac.webkit.org/changeset/53044
        https://bugs.webkit.org/show_bug.cgi?id=33419
        
        We need to look into this some more because the Qt
        bot is failing the XSSAuditor tests. See bug #33419
        for more details.

        * Api/qwebsettings.cpp:
        * Api/qwebsettings.h:

2010-01-09  Daniel Bates  <dbates@webkit.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=33419

        Adds support for the XSSAuditor to the Qt DRT.

        * Api/qwebsettings.cpp: Updated comment to reflect added key XSSAuditorEnabled.
        * Api/qwebsettings.h: Adds settings key XSSAuditorEnabled.

2010-01-08  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Delegation client
        https://bugs.webkit.org/show_bug.cgi?id=32826

        Added method createPopup to ChromeClientQt used to create popups.
        QtFallbackWebPopup moved from WebCore/platform/qt to
        WebKit/qt/WebCoreSupport.

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::createPopup):
        * WebCoreSupport/ChromeClientQt.h:
        * WebCoreSupport/QtFallbackWebPopup.cpp: Added.
        (WebCore::QtFallbackWebPopup::QtFallbackWebPopup):
        (WebCore::QtFallbackWebPopup::show):
        (WebCore::QtFallbackWebPopup::populate):
        (WebCore::QtFallbackWebPopup::showPopup):
        (WebCore::QtFallbackWebPopup::hidePopup):
        (WebCore::QtFallbackWebPopup::activeChanged):
        (WebCore::QtFallbackWebPopup::setParent):